manifests/boundary-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boundary-worker
  namespace: aniket-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boundary-worker
  template:
    metadata:
      labels:
        app: boundary-worker
    spec:
      containers:
      - name: boundary-worker
        image: hashicorp/boundary:0.15
        args:
          - worker
          - -config=/boundary/boundary-worker.hcl
        volumeMounts:
        - name: config
          mountPath: /boundary/boundary-worker.hcl
          subPath: boundary-worker.hcl
      volumes:
      - name: config
        configMap:
          name: boundary-worker-config
