manifests/boundary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boundary-ingress
  namespace: aniket-test
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /boundary
        pathType: Prefix
        backend:
          service:
            name: boundary
            port:
              number: 9200
